finished bulma and squashed some bugzzz

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -76,6 +76,29 @@ header {
   position: initial;
 }
 
+
+.panel { border: 1px solid $primary; }
+.panel-heading {
+  background-color: $primary;
+  color: white;
+}
+.panel-block .delete {
+  float: right;
+  height: 20px;
+  width: 20px;
+  margin-top: -2px;
+}
+
+.messages {
+  &:nth-child(even) {
+    background-color: white;
+  }
+  &:before {
+    content: "\00bb";
+    padding-right: 6px;
+  }
+}
+
 .form-container {
   background-color: white;
   padding: 25px;
@@ -93,59 +116,6 @@ header {
 
 .text-centered {
   text-align: center;
-}
-
-.chat-window {
-  .inner {
-    border: 1px solid $shield;
-    border-radius: 4px 4px 0 0;
-    background-color: lighten($light, 15%);
-    position: relative;
-    padding-bottom:40px;
-    h4 {
-      background-color: $light;
-      border-radius: 4px 4px 0 0;
-      text-align: center;
-      padding: 5px 0;
-      margin: 1px;
-      color: $shield;
-    }
-    ul {
-      margin: 0;
-      padding: 15px;
-      list-style: none;
-      li {
-        padding: 0 5px;
-        position: relative;
-        &:before {
-          content: "\00bb";
-          padding-right: 8px;
-        }
-        &:nth-child(even) {
-          background-color: lighten($light, 10%);
-        }
-        .delete {
-          display: none;
-          position: absolute;
-          right: 5px;
-          top: 5px;
-        }
-        &:hover .delete {
-          display: block;
-        }
-      }
-    }
-    form, section { margin-bottom: 0;}
-    form {
-      position: absolute;
-      width: 100%;
-      bottom:0;
-      left: 0;
-      input {
-        border-top: 3px solid $shield;
-      }
-    }
-  }
 }
 
 .tabsList {
